--- a/index.html
+++ b/index.html
@@ -3,7 +3,20 @@
 		<meta charset="utf-8">
 		<title> Pagename </title>
 		<link rel="stylesheet" href="css/style.css">
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+		<script type="text/javascript" src="js/scripts.js"></script>
 	</head>
 	<body>
+	
+		<div id="carousel">
+			<ul>
+				<li><img src="images/slider1.jpg"> </li>
+				<li><img src="images/slider2.jpg"> </li>
+				<li><img src="images/slider3.jpg"> </li>
+				<li><img src="images/slider4.jpg"> </li>
+				<li><img src="images/slider5.jpg"> </li>
+			</ul>
+		</div>
+	
 	</body>
 </html>
