--- a/index.html
+++ b/index.html
@@ -2,21 +2,34 @@
 	<head>
 		<meta charset="utf-8">
 		<title> Pagename </title>
+		<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" rel="stylesheet" >
 		<link rel="stylesheet" href="css/style.css">
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 		<script type="text/javascript" src="js/scripts.js"></script>
 	</head>
 	<body>
 	
-		<div id="carousel">
-			<ul>
-				<li><img src="images/slider1.jpg"> </li>
-				<li><img src="images/slider2.jpg"> </li>
-				<li><img src="images/slider3.jpg"> </li>
-				<li><img src="images/slider4.jpg"> </li>
-				<li><img src="images/slider5.jpg"> </li>
-			</ul>
-		</div>
-	
+	    <div id="carousel">
+			<div id="carouselScreen">
+				<ul>
+					<li><img src="images/slider1.jpg"> </li>
+					<li><img src="images/slider2.jpg"> </li>
+					<li><img src="images/slider3.jpg"> </li>
+					<li><img src="images/slider4.jpg"> </li>
+					<li><img src="images/slider5.jpg"> </li>
+				</ul>
+			</div>
+			
+			<div class="carouselSideButton" id="js-toLeft"><i class="fa fa-step-backward" aria-hidden="true"></i></div>
+			<div class="carouselSideButton" id="js-toRight"><i class="fa fa-step-forward" aria-hidden="true"></i></div>
+			
+			<div id="markersContainer">
+				<div class="js-mark" markId="1"></div>
+				<div class="js-mark" markId="2"></div>
+				<div class="js-mark" markId="3"></div>
+				<div class="js-mark" markId="4"></div>
+				<div class="js-mark" markId="5"></div>
+			</div>
+		<div>
 	</body>
 </html>
