--- a/index.html
+++ b/index.html
@@ -11,25 +11,15 @@
 	
 	    <div id="carousel">
 			<div id="carouselScreen">
-				<ul>
-					<li><img src="images/slider1.jpg"> </li>
-					<li><img src="images/slider2.jpg"> </li>
-					<li><img src="images/slider3.jpg"> </li>
-					<li><img src="images/slider4.jpg"> </li>
-					<li><img src="images/slider5.jpg"> </li>
-				</ul>
+				<img id="imgbase">
 			</div>
 			
 			<div class="carouselSideButton" id="js-toLeft"><i class="fa fa-step-backward" aria-hidden="true"></i></div>
 			<div class="carouselSideButton" id="js-toRight"><i class="fa fa-step-forward" aria-hidden="true"></i></div>
 			
-			<div id="markersContainer">
-				<div class="js-mark" markId="1"></div>
-				<div class="js-mark" markId="2"></div>
-				<div class="js-mark" markId="3"></div>
-				<div class="js-mark" markId="4"></div>
-				<div class="js-mark" markId="5"></div>
+			<div id="markersContainer">	
 			</div>
+			
 		<div>
 	</body>
 </html>
